# tiny-differentiable-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  all_zero_loss_info.txt  all_zero_rollout.csv  analyze_rollout.py  optimized_params.txt  optimized_qs.csv  optimized_rollout.csv  pybullet_rollout.csv  run_experiment.sh  tiny_geometry.h  tiny_mb_constraint_solver.h  tiny_mb_constraint_solver_spring.h  tiny_multi_body.h  tiny_neural_network.h  tiny_smooth_constraint_solver.h  tiny_spatial_motion_vector.h  tiny_spatial_transform.h  tiny_world.h  vcpkg.json  visualize_swimmer.py
data/mit-push/abs/test_butter/: motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.525_t=-0.349.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.525_t=0.000.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.525_t=0.349.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.525_t=0.698.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.525_t=1.047.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.525_t=1.396.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.550_t=0.000.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.550_t=0.349.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.550_t=0.698.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.550_t=1.047.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.925_t=-0.349.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.925_t=-0.698.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.925_t=-1.047.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.925_t=-1.396.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.950_t=-0.349.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.950_t=0.000.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.950_t=0.349.h5  motion_surface=abs_shape=butter_a=0_v=100_i=0.000_s=0.950_t=0.698.h5  motion_surface=abs_shape=butter_a=0_v=150_i=0.000_s=0.000_t=-0.349.h5  motion_surface=abs_shape=butter_a=0_v=150_i=0.000_s=0.000_t=-0.698.h5  motion_surface=abs_shape=butter_a=0_v=150_i=0.000_s=0.000_t=0.000.h5  motion_surface=abs_shape=butter_a=0_v=150_i=0.000_s=0.000_t=0.349.h5  motion_surface=abs_shape=butter_a=0_v=150_i=0.000_s=0.000_t=0.698.h5  motion_surface=abs_shape=butter_a=0_v=150_i=0.000_s=0.000_t=1.047.h5  motion_surface=abs_shape=butter_a=0_v=50_i=0.000_s=0.850_t=-0.349.h5  motion_surface=abs_shape=butter_a=0_v=50_i=0.000_s=0.850_t=-0.698.h5  motion_surface=abs_shape=butter_a=0_v=50_i=0.000_s=0.850_t=-1.047.h5  motion_surface=abs_shape=butter_a=0_v=50_i=0.000_s=0.850_t=-1.396.h5  motion_surface=abs_shape=butter_a=0_v=50_i=0.000_s=0.850_t=1.047.h5  motion_surface=abs_shape=butter_a=0_v=50_i=0.000_s=0.850_t=1.396.h5  (+10 more)
data/swimmer/: swimmer03.npy
data/swimmer/swimmer03/: model.xml  swimmer03.urdf
data/swimmer/swimmer04/: model.xml  swimmer04.urdf
data/swimmer/swimmer05/: model.xml  swimmer05.urdf
data/swimmer/swimmer06/: model.xml  swimmer06.urdf
data/swimmer/swimmer07/: model.xml  swimmer07.urdf
data/swimmer/swimmer08/: model.xml  swimmer08.urdf
data/swimmer/swimmer09/: model.xml  swimmer09.urdf
data/swimmer/swimmer10/: model.xml  swimmer10.urdf
data/swimmer/swimmer11/: model.xml  swimmer11.urdf
data/swimmer/swimmer12/: model.xml  swimmer12.urdf
data/swimmer/swimmer13/: model.xml  swimmer13.urdf
data/swimmer/swimmer14/: model.xml  swimmer14.urdf
examples/: CMakeLists.txt  billiard_opt_gui.cpp  billiard_opt_simple.cpp  billiard_simple_trajOpt.cpp  box_opt_simple.cpp  ceres_box_example.cpp  ceres_estimation.cpp  ceres_estimation_real.cpp  ceres_utils.h  ct_cartpole.cpp  ct_contact_trajopt.cpp  ct_laikago_tracking.cpp  enoki_hello_world.cpp  experiment_neural_swimmer.cpp  experiment_neural_swimmer.py  generic_urdf_collision.cpp  gravity_compensation.cpp  laikago_example_gui.cpp  laikago_footstep_ik.cpp  laikago_meshcat_example.cpp  meshcat_zmq_example.cpp  neural_actuator.cpp  neural_augmentation.h  neural_contact.cpp  neural_discovery.cpp  neural_heightfield.cpp  neural_joint.cpp  neural_pendulum.cpp  neural_push.cpp  neural_push_utils.h  neural_scalar.h  neural_wtf.cpp  opengl_test.cpp  opengl_urdf_visualizer.h  pagmo_box_example.cpp  pagmo_getting_started.cpp  pendulum.h  pendulum.hpp  pendulum_example_gui.cpp  pendulum_ik_gui.cpp  (+10 more)
examples/old/: cartpole_opt.cpp  contact_discovery.cpp  gravity_compensation.cpp  laikago_example_gui.cpp  laikago_footstep_ik.cpp  neural_actuator.cpp  pendulum_analytic_example_gui.cpp  pendulum_ik_gui.cpp  test_xarm.cpp  tiny_gym_env.h  tiny_traj_opt.h  tiny_urdf_parser_example.cpp  tiny_urdf_parser_opengl_example.cpp  torch_example.cpp  world_example.cpp  world_example_gui.cpp  xarm.h  xarm_example_gui.cpp
examples/opengl_window/: CMakeLists.txt  tiny_gl_instancing_renderer.cpp
python/: pytinydiffsim.cc  requirements.txt
python/plotting/: Push Dataset.ipynb  Push URDF.ipynb  plot_param_evolution.py
scripts/: analyze_rollout.py  visualize_swimmer.py
src/: base.hpp  contact_point.hpp  geometry.h  geometry.hpp  link.hpp  mb_constraint_solver.hpp  mb_constraint_solver_spring.hpp  multi_body.hpp  rb_constraint_solver.hpp  rigid_body.hpp  tiny_mb_constraint_solver.h  tiny_world.h  world.hpp
src/dynamics/: forward_dynamics.hpp  integrator.hpp  jacobian.hpp  kinematics.hpp  mass_matrix.hpp
src/math/: enoki_algebra.hpp  inertia.hpp  neural_network.hpp  pose.hpp  spatial_vector.hpp  transform.hpp
src/math/tiny/: neural_scalar.h  neural_scalar.hpp  tiny_algebra.hpp  tiny_double_utils.h  tiny_float_utils.h  tiny_matrix3x3.h  tiny_matrix6x6.h  tiny_matrix_x.h  tiny_vector3.h
src/urdf/: pybullet_urdf_import.hpp  system_constructor.hpp  tiny_system_constructor.h  tiny_urdf_conversion.h  tiny_urdf_parser.h  tiny_urdf_structures.h  tiny_urdf_to_multi_body.h  urdf_cache.hpp  urdf_parser.hpp  urdf_structures.hpp  urdf_to_multi_body.hpp
src/utils/: ceres_estimator.hpp  dataset.hpp  file_utils.hpp  neural_augmentation.hpp  parameter.hpp  tiny_dataset.h  tiny_file_utils.h
test/: pendulum_test.cc  urdf_test.cc
tools/: make_appimage.sh
(+50 files in other folders)
